2014-04-16 Molnar Karoly <molnarkaroly AT users.sf.net>

	* device/include/pic14/pic14devices.txt,
	  device/include/pic14/pic16regs.h,
	  device/non-free/include/pic14/pic12lf1554.h,
	  device/non-free/include/pic14/pic12lf1559.h,
	  device/non-free/lib/pic14/libdev/devices.txt,
	  device/non-free/lib/pic14/libdev/pic12lf1554.c,
	  device/non-free/lib/pic14/libdev/pic12lf1559.c,
	  doc/sdccman.lyx:
	  New devices.

2014-07-11 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/stm8/gen.c:
	  Remove workarounds for bug #2198.

2014-07-09 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sdas/linksrc/lkrloc3.c (adb_hi, adb_lo, relr3),
	  sdas/asxxsrc/asout.c (outrxb): back port some of ASxxxx 5.06 to
	  fix bug 2198

2014-07-08 Molnar Karoly <molnarkaroly AT users.sf.net>
	* device/non-free/include/pic14/pic1xxx.h,
	  device/non-free/lib/pic14/libdev/pic1xxx.c,
	  device/non-free/include/pic16/pic18fxxx.h,
	  device/non-free/lib/pic16/libdev/pic18fxxx.c:
	  updated

	* device/non-free/include/pic14/pic12f1571.h,
	  device/non-free/include/pic14/pic12f1572.h,
	  device/non-free/include/pic14/pic12f1612.h:
	  Added the missing _DEBUG_ON and _DEBUG_OFF config options.
	  (These Microchip bugs in original mpasmx includes.)

2014-07-07 Ben Shi <powerstudio1st AT 163.com>
        * sim/ucsim/stm8.src/inst.cc:
          Unify all flag affection code to flag_cvh().

2014-07-06 Ben Shi <powerstudio1st AT 163.com>
        * sim/ucsim/stm8.src/inst.cc:
          Merge inst_sub() to inst_sbc().

2014-07-03 Ben Shi <powerstudio1st AT 163.com>
        * sim/ucsim/stm8.src/inst.cc:
          Fix potential bugs in inst_dec(), inst_inc() & inst_ldxy(): flags affection.
          Make inst_addw(), inst_clr() & inst_ldxydst() more understandable.
        * sim/ucsim/stm8.src/stm8.cc:
          Fix potential bugs in CALLR & CALLF: the stack saved PC value is not accurate.

2014-06-30 Ben Shi <powerstudio1st AT 163.com>
        * sim/ucsim/stm8.src/inst.cc: