@@ -405,7 +405,7 @@ sub correct_name($)
 
         # Adds to the list the $Name register.
 
-sub add_register($$)
+sub new_register($$)
   {
   my ($Name, $Address) = @_;
 
@@ -544,7 +544,7 @@ sub add_reg_bits($$)
     if (! defined($reg))
       {
       Log("The $name register is not directly be reached or does not exist. ($mcu)", 2);
-      $reg = add_register($name, -1);
+      $reg = new_register($name, -1);
       }
 
     bit_filtration($name, $Bits);
@@ -694,7 +694,7 @@ sub read_content_from_header($)
         # PORTC     EQU  H'0007'
         #
 
-          add_register($1, str2int($2));
+          new_register($1, str2int($2));
           }
         } # when (ST_REG_ADDR)
 
@@ -894,8 +894,8 @@ sub extract_config_area($$)
   open(LIB, '<', $gpproc_path) || die "extract_config_area(): Can not open. -> \"$gpproc_path\"\n";
 
         # static struct px pics[] = {
-        #   { PROC_CLASS_PIC12E   , "__12F529T39A"  , { "pic12f529t39a"  , "p12f529t39a"    , "12f529t39a"      }, 0xE529,  3,    8, 0x0005FF, 0x000600, {       -1,       -1 }, { 0x000FFF, 0x000FFF }, "12f529t39a_g.lkr"  , 0 },
-        #   { PROC_CLASS_PIC14E   , "__16LF1517"    , { "pic16lf1517"    , "p16lf1517"      , "16lf1517"        }, 0xA517,  4,   32, 0x001FFF, 0x002000, {       -1,       -1 }, { 0x008007, 0x008008 }, "16lf1517_g.lkr"    , 0 },
+        #   { PROC_CLASS_PIC12E   , "__12F529T39A"  , { "pic12f529t39a"  , "p12f529t39a"    , "12f529t39a"      }, 0xE529,  3,    8, 0x0005FF, 0x000600, {       -1,       -1 }, { 0x000640, 0x000643 }, { 0x000FFF, 0x000FFF }, {       -1,       -1 }, "p12f529t39a.inc"  , "12f529t39a_g.lkr"  , 0 },
+        #   { PROC_CLASS_PIC14E   , "__16LF1517"    , { "pic16lf1517"    , "p16lf1517"      , "16lf1517"        }, 0xA517,  4,   32, 0x001FFF, 0x002000, {       -1,       -1 }, { 0x008000, 0x008003 }, { 0x008007, 0x008008 }, {       -1,       -1 }, "p16lf1517.inc"    , "16lf1517_g.lkr"    , 0 },
 
   my $in_table = FALSE;
 
@@ -905,9 +905,9 @@ sub extract_config_area($$)
 
     if (! $in_table)
       {
-      $in_table = TRUE if ($_ =~ /^\s*static\s+struct\s+px\s+pics\[\s*\]\s*=\s*\{\s*$/io);
+      $in_table = TRUE if (/^\s*static\s+struct\s+px\s+pics\[\s*\]\s*=\s*\{\s*$/io);
       }
-    elsif ($_ =~ /\{\s*PROC_CLASS_\w+\s*,\s*"\w+"\s*,\s*\{\s*"\w+"\s*,\s*"\w+"\s*,\s*"(\S+)"\s*}\s*,\s*[\w-]+\s*,\s*[\w-]+\s*,\s*[\w-]+\s*,\s*\S+\s*,\s*\S+\s*,\s*\{\s*\S+\s*,\s*\S+\s*\}\s*,\s*{\s*(\S+)\s*,\s*(\S+)\s*\}\s*,\s*\"?[\.\w]+\"?\s*,\s*\d+\s*\}/io)
+    elsif (/\{\s*PROC_CLASS_\w+\s*,\s*"\w+"\s*,\s*\{\s*"\w+"\s*,\s*"\w+"\s*,\s*"(\w+)"\s*}\s*,\s*[\w-]+\s*,\s*[\w-]+\s*,\s*[\w-]+\s*,\s*\S+\s*,\s*\S+\s*,\s*\{\s*\S+\s*,\s*\S+\s*\}\s*,\s*{\s*\S+\s*,\s*\S+\s*\}\s*,\s*{\s*(\S+)\s*,\s*(\S+)\s*\}\s*,\s*{\s*\S+\s*,\s*\S+\s*\}\s*,\s*\"?[\.\w]+\"?\s*,\s*\"?[\.\w]+\"?\s*,\s*\d+\s*\}/io)
       {
       my ($name, $c_start, $c_end) = ($1, $2, $3);
 
@@ -1403,7 +1403,7 @@ sub make_pic14_dependent_defs()
 
 sub print_to_header_file()
   {
-  my $text;
+  my ($text, $name, $address, $str);
 
   print_license('declarations');
   Outl("#ifndef __${mcu}_H__\n#define __${mcu}_H__\n\n$section");
@@ -1416,9 +1416,10 @@ sub print_to_header_file()
 
     foreach (sort { $a->{ADDRESS} <=> $b->{ADDRESS} } @registers)
       {
-      my ($name, $address) = ($_->{NAME}, $_->{ADDRESS});
-      my $str = sprintf('0x%04X', $address);
+      ($name, $address) = ($_->{NAME}, $_->{ADDRESS});
+      next if ($address < 0);
 
+      $str = sprintf('0x%04X', $address);
       Outl(align("#define ${name}_ADDR", DIST_ADDRSIZE), $str);
       }
 
