@@ -1,4 +1,9 @@
-2014-04-16 Molnar Karoly <molnarkaroly AT users.sf.net>
+2014-07-12 Molnar Karoly <molnarkaroly AT users.sf.net>
+	* support/scripts/cinc2h.pl: Bugfix and update.
+
+	* device/non-free/include/pic14/pic16c433.h: bugfix
+
+2014-07-12 Molnar Karoly <molnarkaroly AT users.sf.net>
 
 	* device/include/pic14/pic14devices.txt,
 	  device/include/pic14/pic16regs.h,
